# cotton

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: main.yml  rust.yml
compiler/: Cargo.toml
compiler/parser/: Cargo.toml
compiler/parser/src/: lex.rs  lib.rs  parse.rs  token_id.rs
compiler/src/: ast_step1.rs  ast_step2.rs  ast_step3.rs  ast_step3_5.rs  ast_step4.rs  ast_step5.rs  ast_step6.rs  codegen.rs  errors.rs  intrinsics.rs  intrinsics2.rs  lib.rs  print_types.rs  run_c.rs  run_js.rs  rust_backend.rs
compiler/src/ast_step1/: decl_id.rs  ident_id.rs  name_id.rs  token_map.rs
compiler/src/ast_step2/: ident_id.rs  imports.rs  name_id.rs  type_alias_map.rs  type_display.rs  types.rs  variance.rs
compiler/src/ast_step3/: type_check.rs  type_util.rs
compiler/src/ast_step3/type_check/: match_operand.rs  min_type.rs  simplify.rs
compiler/src/ast_step4/: padded_type_map.rs  specialize.rs
compiler/src/codegen/: c_type.rs  type_restriction_pattern.rs
cotton/: Cargo.toml
cotton/src/: ast_step1.rs  ast_step2.rs  ast_step3.rs  ast_step4.rs  ast_step5.rs  ast_step6.rs  codegen.rs  intrinsics.rs  lib.rs  main.rs  print_types.rs  run_js.rs  rust_backend.rs
cotton/tests/: test.rs
doki/: Cargo.toml
doki/src/: ast_step1.rs  ast_step2.rs  codegen.rs  intrinsics.rs  lib.rs
examples/: apply_pattern.cot  bin_tree.cot  error_handling.cot  fibonacci.cot  field_accessor.cot  fizzbuzz.cot  flat_map.cot  fold.cot  helloworld.cot  hoge_loop.cot  interface.cot  list.cot  modules.cot  multiple_dispatch.cot  mutual_recursive_type_alias.cot  nexts.cot  overload.cot  palindrome_type.cot  prime.cot  prime2.cot  println.cot  puts.cot  question.cot  question2.cot  red_black_tree.cot  red_black_tree_strongly_typed.cot  red_brack_tree2.cot  result_println.cot  result_puts.cot  type_pattern.cot  type_pattern_primitive.cot
language_server/: Cargo.toml
language_server/src/: lib.rs  main.rs  tests.rs
lsp/: Cargo.toml
lsp/src/: main.rs
parse/: Cargo.toml
parse/src/: lex.rs  lib.rs  parse.rs  token_id.rs
src/: ast.rs  ast0.rs  ast0_5.rs  ast1.rs  ast2.rs  ast3.rs  ast_level1.rs  ast_level2.rs  ast_level3.rs  ast_level4.rs  ast_step0.rs  ast_step1.rs  ast_step2.rs  ast_step3.rs  ast_step4.rs  codegen.rs  intrinsics.rs  lib.rs  main.rs  name_conversion.rs  parse.rs  resolve_type_names.rs  rust_backend.rs  type_check.rs  type_variable.rs
src/ast1/: types.rs
src/ast2/: types.rs
src/ast3/: type_check.rs  type_util.rs
src/ast_level2/: types.rs
src/ast_level3/: type_check.rs  type_util.rs
test/: do_order.cot  fibonacci.js  helloworld.js  to_string_fail.cot
tests/: and_fail.cot  apply_pattern2.cot  apply_pattern_fail.cot  bin_tree2.cot  bin_tree_fail.cot  do_order.cot  fizzbuzz_loop.cot  inf_implicit_req_fail.cot  interface2.cot  lambda_in_apply_pattern.cot  list_fail.cot  list_without_types.cot  literal_pattern_fail.cot  modules2.cot  modules3.cot  modules4.cot  modules5.cot  modules_fail.cot  modules_fail2.cot  modules_fail3.cot  modules_fail4.cot  modules_fail5.cot  modules_fail6.cot  mutual_recursive_type_alias_fail.cot  nexts.cot  palindrome_type_fail1.cot  palindrome_type_fail2.cot  palindrome_type_with_annotation.cot  pattern.cot  pattern_any_fail.cot  pattern_any_fail2.cot  prime_union.cot  question_eval_order.cot  question_eval_order2.cot  red_black_tree_strongly_typed_fail1.cot  red_black_tree_strongly_typed_fail2.cot  rfold_with_empty.cot  shadow_wildcard_import.cot  simple_subtype_error_fail.cot  test.rs  (+7 more)
(+21 files in other folders)
