[package]
name = "cotton"
version = "0.1.0"
edition = "2021"
description = "A programming language."

[workspace]
default-members = [".", "compiler"]
members = [
  "compiler/parser",
  "language_server",
]

[profile.release]
debug = true

[profile.test]
opt-level = 2

[dependencies]
clap = { version = "3.2.22", features = ["cargo"] }
compiler = { path = "compiler" }
log = "0.4.14"

[dev-dependencies]
assert_cmd = "2.0.4"
itertools = "0.10.3"
stripmargin = "*"
