[package]
name = "cotton"
version = "0.1.0"
edition = "2021"
description = "A programming language."

[workspace]
default-members = [".", "compiler"]
members = ["compiler/parser", "language_server"]

[profile.release]
debug = true

[profile.test]
opt-level = 2

[dependencies]
clap = { version = "3.2.22", features = ["cargo"] }
compiler = { path = "compiler" }
language_server = { path = "language_server", optional = true }
log = "0.4.14"

[features]
default = []
language-server = ["language_server"]

[dev-dependencies]
assert_cmd = "2.0.4"
itertools = "0.10.3"
stripmargin = "*"
