[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.8.0"
itertools = "0.10.3"
petgraph = "0.6.0"
hashbag = "0.1.3"
fxhash = "0.2.1"
stripmargin = "*"
simplelog = "0.12.0"
log = "0.4.14"
strum = { version = "0.24", features = ["derive"] }
index_list = "0.2.7"
parser = { path = "parser" }
unic-ucd-category = "0.9.0"
tracing-mutex = "0.2"
ariadne = "0.1.5"
colored = "2.0.0"
smallvec = "1.10.0"
tempfile = "3.5.0"

[dev-dependencies]
assert_cmd = "2.0.4"
