[package]
name = "language_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
tokio = { version = "1.24.1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.17"
compiler = { path = "../compiler" }
dashmap = "5.4.0"
once_cell = "1.15.0"
